# algorithmic-trading-sim

./: .gitignore  README.md  pyproject.toml  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md
.cursor/rules/: rules.mdc
.github/workflows/: ci.yml
assets/: PLACEHOLDER.txt  architecture.mmd
scripts/: benchmark.py
server/: app.py
tests/: test_core.py
trading/: __init__.py
trading/analytics/: ohlc.py
trading/core/: __init__.py  enums.py  matching_engine.py  order.py  order_book.py  order_factory.py  trader.py
trading/sim/: bots.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: theme-toggle.tsx
web/src/components/charts/: candles.tsx
web/src/components/controls/: order-entry.tsx
web/src/components/metrics/: animated-number.tsx
web/src/components/orderbook/: order-book.tsx
web/src/components/portfolio/: positions.tsx
web/src/components/trades/: recent-trades.tsx
web/src/components/ui/: scroll-area.tsx  slider.tsx
