[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithmic-trading-sim"
version = "0.1.0"
description = "Core OOP backbone for an algorithmic trading simulator"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
    "tests",
]


